# tour_site

./: .coverage  Makefile  compose.yaml  pyproject.toml  settings.py
database/: config.py  database.py
pgdata/pg_stat/: pgstat.stat
src/: api_clients.py  main.py  settings.py
src/home_page/: utils.py  view.py
src/home_page/templates/: base.html  header.html  index.html
test/: test_client.py  test_main.py
